--- a/views/uploadPage.pug
+++ b/views/uploadPage.pug
@@ -1,12 +1,30 @@
 html
   head
     title= title
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css', type='text/css')
+    link(rel='stylesheet', href='/style/style.css', type='text/css')
+
   body
     div.container
-      div.jumbotron
-        form#fileUpload.form(method="post" action="/submit-csv" enctype="multipart/form-data")
-          label(for="payload") Select a file to upload:
-          input#payload(type="file" name="myFile" accept="csv/*")
-          br
-          button.btn.btn-default#upload Upload
+      div.col-md-8.col-md-offset-2
+        form#form.box(method="post", action="/submit", enctype="multipart/form-data")
+          div#file.box__input
+            input.box__file(type="file", name="excel-file", accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
+
+            label(for="file")
+              a.choose-file.js-choose-file Choose a file
+              span.box__dragndrop &nbsp;or drag it here
+
+          div.box__filename.js-filename  
+
+          button.box__button.btn.btn-primary(type="submit") Upload
+
+    script(src='https://code.jquery.com/jquery-1.12.4.min.js', type='text/javascript', integrity='sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=', crossorigin='anonymous')
+    script(src='/js/main.js', type='text/javascript')
+
+        
+
+
+
+
+
