--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,6 +39,16 @@ body {
     color: gray;
   }
 
+  &__label {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 200;
+  }
+
+}
+
+.upload-icon {
+  width: 20%;
 }
 
 
