--- a/output/staffingUpdate.css
+++ b/output/staffingUpdate.css
@@ -1,44 +1,84 @@
 .table-body {
   font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif;
   font-weight: 200;
-  margin: 0;
+  color: #574141;
+  width: 600px;
   padding: 0;
   -webkit-font-smoothing: antialiased;
-  width: 100%;
-  margin: auto; }
+  margin: auto;
+  background-color: #f8f8f8; }
 
-.overview__greeting {
-  font-size: 22px; }
+.stats-circle {
+  position: relative;
+  display: inline-block;
+  height: 105px;
+  width: 105px;
+  border-radius: 50%;
+  margin-right: 36px;
+  background-color: #e4d5dc; }
+  .stats-circle__figure {
+    font-size: 35px;
+    font-weight: 800;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .stats-circle__caption {
+    font-size: 15px;
+    font-weight: 600;
+    color: #695555;
+    position: absolute;
+    top: 101%;
+    text-align: center;
+    width: 105px; }
+
+.overview {
+  font-size: 12px;
+  padding: 10px 35px; }
+  .overview__greeting {
+    font-size: 18px;
+    margin-top: 40px; }
+
+.legend-row {
+  margin-top: 40px; }
 
 .legend {
-  width: 20px;
-  height: 20px;
+  width: 100px;
+  font-size: 12px;
   display: inline-block;
   position: relative;
-  bottom: -5px;
-  border-radius: 50%; }
+  color: #fff;
+  text-align: center;
+  padding: 5px 0; }
   .legend-upcoming {
-    background-color: #ffa500; }
+    background-color: #f88e1b; }
   .legend-current {
-    background-color: #008000; }
+    background-color: #15ab53; }
   .legend-ramping {
-    background-color: #f00; }
+    background-color: #f12c22; }
 
 .project {
-  margin-bottom: 15px;
-  width: 100%; }
+  font-size: 12px; }
   .project__label {
-    font-weight: 600; }
+    font-weight: 600;
+    font-size: 15px; }
+  .project__body {
+    padding: 10px 35px; }
 
-.project-header-upcoming {
-  background-color: #ffa500; }
-
-.project-header-current {
-  background-color: #008000; }
-
-.project-header-ramping {
-  background-color: #f00; }
-
-.project-header__title {
-  padding: 5px;
+.project-header {
+  margin: 15px auto 0;
+  box-sizing: border-box;
+  display: block;
+  padding: 5px 0 5px 35px;
+  width: 600px;
   color: whiteSmoke; }
+  .project-header-upcoming {
+    background-color: #f88e1b; }
+  .project-header-current {
+    background-color: #15ab53; }
+  .project-header-ramping {
+    background-color: #f12c22; }
+  .project-header__title {
+    font-size: 16px;
+    font-weight: bold; }
