--- a/output/staffingUpdate.css
+++ b/output/staffingUpdate.css
@@ -38,10 +38,10 @@
   padding: 10px 35px; }
   .overview__greeting {
     font-size: 18px;
-    margin-top: 40px; }
+    padding-top: 30px; }
 
 .legend-row {
-  margin-top: 40px; }
+  padding-top: 30px; }
 
 .legend {
   width: 100px;
@@ -60,6 +60,9 @@
 
 .project {
   font-size: 12px; }
+  .project__divider {
+    padding: 10px;
+    background-color: white; }
   .project__label {
     font-weight: 600;
     font-size: 15px; }
@@ -67,7 +70,6 @@
     padding: 10px 35px; }
 
 .project-header {
-  margin: 15px auto 0;
   box-sizing: border-box;
   display: block;
   padding: 5px 0 5px 35px;
